testsuite/veronac/typechecking/compile-fail/invalid-field-read.out/stderr.txt
invalid-field-read.verona:8:3: error: Inference failed for method read_from_missing_capability
  read_from_missing_capability(cell: Cell) {
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~>
1 error generated
